# mingru

./: README.md  dev_requirements.in  pyproject.toml  selective_copying.py  ucf101_classification.py
mingru/: __init__.py  functional.py  mingrus.py  modules.py  scan.py  version.py
tests/: test_conv_mingru.py  test_convmingru.py  test_interface.py  test_mingru.py  test_mingru_cell.py  test_mingruconv2d.py  test_mingruconv2d_cell.py  test_scan.py
tests/helpers/: scriptable.py
