[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
authors = [{ name = "Christoph Heindl"}]
name = "mingru"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/cheind/mingru"

[tool.setuptools.packages.find]
where = ["."] 
include = ["mingru*"]

[tool.setuptools.dynamic]
version = {attr = "mingru.version.VERSION"}
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["dev-requirements.in"] }